[package]
name = "frequenz-resampling"
version = "0.1.0"
edition = "2021"

[lib]
name = "frequenz_resampling"
crate-type = ["cdylib", "rlib"]

[features]
python = ["pyo3"]

[dependencies]
itertools = "0.13"
num-traits = "0.2"
chrono = "0.4"
log = "0.4"
pyo3 = { version = "0.23.2", features = ["extension-module", "chrono"], optional = true }
