[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "frequenz-resampling"
description = "Resampling a stream of samples to a given interval."
readme = "README.md"
license = { text = "MIT" }
keywords = ["frequenz", "python", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">= 3.11, < 4"
dynamic = ["version"]

[[project.authors]]
name = "Frequenz Energy-as-a-Service GmbH"
email = "floss@frequenz.com"

[tool.maturin]
features = ["python"]
module-name = "frequenz.resampling._rust_backend"
profile = "release"
bindings = "pyo3"


[project.optional-dependencies]
dev-flake8 = [
  "flake8 == 7.1.1",
  "flake8-docstrings == 1.7.0",
  "flake8-pyproject == 1.2.3",  # For reading the flake8 config from pyproject.toml
  "pydoclint == 0.5.14",
  "pydocstyle == 6.3.0",
]
dev-formatting = ["black == 24.10.0", "isort == 5.13.2"]
dev-mkdocs = [
  "black == 24.10.0",
  "Markdown==3.7",
  "mike == 2.1.3",
  "mkdocs-gen-files == 0.5.0",
  "mkdocs-literate-nav == 0.6.1",
  "mkdocs-macros-plugin == 1.3.7",
  "mkdocs-material == 9.5.49",
  "mkdocstrings[python] == 0.27.0",
  "mkdocstrings-python == 1.13.0",
  "frequenz-repo-config[lib] == 0.11.0",
]
dev-mypy = [
  "mypy == 1.14.1",
  "types-Markdown == 3.7.0.20240822",
  "types-setuptools == 75.6.0.20241126",
  "frequenz-resampling[dev-mkdocs,dev-noxfile,dev-pytest]"
]
dev-noxfile = ["nox == 2024.10.9", "frequenz-repo-config[lib] == 0.11.0"]
dev-pylint = [
  "pylint == 3.3.3",
  "frequenz-resampling[dev-mkdocs,dev-noxfile,dev-pytest]"
]
dev-pytest = [
  "pytest == 8.3.4",
  "pytest-mock == 3.14.0",
  "pytest-asyncio == 0.25.0",
  "async-solipsism == 0.7",
  "hypothesis == 6.123.2",
]
dev-rust-build = [
  "maturin>=1.7,<2.0"
]
dev = [
  "frequenz-resampling[dev-mkdocs,dev-flake8,dev-formatting,dev-mkdocs,dev-mypy,dev-noxfile,dev-pylint,dev-pytest,dev-rust-build]",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["benchmarks", "examples", "python", "tests"]

[tool.flake8]
# We give some flexibility to go over 88, there are cases like long URLs or
# code in documenation that have extra indentation. Black will still take care
# of making everything that can be 88 wide, 88 wide.
max-line-length = 100
extend-ignore = [
  "E203", # Whitespace before ':' (conflicts with black)
  "W503", # Line break before binary operator (conflicts with black)
]
# pydoclint options
style = "google"
check-return-types = false
check-yield-types = false
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
allow-init-docstring = true
check-class-attributes = false

[tool.pylint.similarities]
ignore-comments = ['yes']
ignore-docstrings = ['yes']
ignore-imports = ['no']
min-similarity-lines = 40

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
  "too-many-return-statements",
  # disabled because it conflicts with isort
  "wrong-import-order",
  "ungrouped-imports",
  # pylint's unsubscriptable check is buggy and is not needed because
  # it is a type-check, for which we already have mypy.
  "unsubscriptable-object",
  # Checked by mypy
  "no-member",
  # Checked by flake8
  "f-string-without-interpolation",
  "redefined-outer-name",
  "unused-import",
  "line-too-long",
  "missing-function-docstring",
  "redefined-outer-name",
  "unnecessary-lambda-assignment",
  "unused-import",
  "unused-variable",
]

[tool.pylint.design]
max-attributes = 12

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio", "pytest-mock"]
markers = [
  "integration: integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
# This option disables mypy cache, and it is sometimes useful to enable it if
# you are getting weird intermittent error, or error in the CI but not locally
# (or vice versa). In particular errors saying that type: ignore is not
# used but getting the original ignored error when removing the type: ignore.
# See for example: https://github.com/python/mypy/issues/2960
no_incremental = true
packages = ["frequenz.resampling"]
strict = true

[[tool.mypy.overrides]]
module = ["frequenz.resampling"]
ignore_missing_imports = true

[tool.setuptools_scm]
version_scheme = "post-release"
